# neotype

./: .gitignore  CMakeLists.txt
App/: CMakeLists.txt  app_cmakelists.txt
App/Source/: App.cpp  TypingGame.cpp  TypingGame.h
Core/: CMakeLists.txt  core_cmakelists.txt
Core/Source/Core/: Core.cpp  TerminalManager.cpp  TerminalManager.h
